eck-operator/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elasticsearch
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - kibana.stg.superk8s.de
  rules:
    - host: kibana.stg.superk8s.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stg-kibana-kb-http
                port:
                  number: 5601
